<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/icon_toolbar_search"
        yourapp:showAsAction="always|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/icon_toolbar_edit"
        yourapp:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_micro"
        android:title="@string/microphone"
        android:icon="@drawable/icon_toolbar_micro"
        yourapp:showAsAction="always" />

    <item
        android:id="@+id/action_remove"
        android:title="@string/remove"
        android:icon="@drawable/icon_toolbar_remove"
        yourapp:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_ab"
        android:icon="@drawable/icon_toolbal_sort"
        yourapp:showAsAction="always" />
</menu>