<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="org.linuxspace.stockquotes.view.cotroller.ActivityDetails"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingPrefix"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <RelativeLayout
            android:id="@+id/rlTopStockCard"
            android:layout_below="@+id/toolbar_actionbar"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="78dp">


            <TextView
                fontPath="fonts/Roboto-Regular.ttf"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/tvStockSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/symbol_black"
                android:text="APPL" />

            <TextView
                fontPath="fonts/Roboto-Regular.ttf"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:ellipsize="end"
                android:layout_marginTop="8dp"
                android:id="@+id/tvStockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/tvStockPriceChange"
                android:layout_below="@+id/tvStockSymbol"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/company_name_gray"
                android:textSize="15sp"
                android:text="Apple" />

            <TextView
                fontPath="fonts/Roboto-Regular.ttf"
                android:paddingTop="13dp"
                android:paddingRight="10dp"
                android:textColor="@color/symbol_black"
                android:id="@+id/tvStockPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                android:text="115.08" />


            <TextView
                android:paddingRight="10dp"
                android:paddingTop="3dp"
                android:id="@+id/tvStockPriceChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tvStockPrice"
                android:textSize="18sp"
                fontPath="fonts/Roboto-Regular.ttf"
                android:text="0.12(0.24%)" />

            <View
                android:layout_alignParentBottom="true"
                android:id="@+id/viewPriceIndicator"
                android:background="@color/price_green"
                android:layout_width="match_parent"
                android:layout_height="2dp"></View>
        </RelativeLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/rlTopStockCard"
            android:id="@+id/llGraphicLabels"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvGraphicLabelWeek"
                android:onClick="onClickGraphicLabel"
                android:textColor="@color/sliding_menu_text_color"
                android:text="@string/grpah_week"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvGraphicLabelMonth"
                android:onClick="onClickGraphicLabel"
                android:textColor="@color/symbol_black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/grpah_month"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvGraphicLabelYear"
                android:onClick="onClickGraphicLabel"
                android:textColor="@color/sliding_menu_text_color"
                android:textSize="14sp"
                android:text="@string/grpah_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:layout_below="@+id/llGraphicLabels"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:id="@+id/chartStock"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:id="@+id/llDetailColumns"
            android:layout_margin="5dp"
            android:layout_below="@+id/chartStock"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="135dp">

            <ListView
                android:background="@color/white"
                android:id="@+id/lvStockDetailsLeft"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginRight="2.5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:divider="@android:color/transparent"
                android:clickable="false"
                android:orientation="vertical"></ListView>

            <ListView
                android:layout_below="@+id/chartStock"
                android:layout_toRightOf="@id/lvStockDetailsLeft"
                android:background="@color/white"
                android:id="@+id/lvStockDetailsRight"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:layout_marginLeft="2.5dp"
                android:clickable="false"
                android:divider="@android:color/transparent"
                android:orientation="vertical"></ListView>

        </LinearLayout>

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:layout_centerInParent="true"
            android:id="@+id/pbLoadingNews"
            android:layout_below="@id/llDetailColumns"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="visible"
            android:background="@color/toolbar_orange" />

        <ListView
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/lvNews"
            android:drawSelectorOnTop="true"
            android:layout_below="@id/llDetailColumns"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </RelativeLayout>
</ScrollView>